Update service.sh